# ege-cpp

./: CMakeLists.txt  README.md  ToDo  problem1.cpp
problem1/: example_1.cpp  example_1_optimised.cpp  example_1_optimized.cpp  example_2.cpp  example_2_dijkstra.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp  example_7.cpp  example_8.cpp  example_9.cpp
problem12/: example_1.cpp  example_2.cpp
problem14/: example_1.cpp  example_2.cpp  example_3.cpp
problem15/: example_1.cpp  example_3.cpp  example_4.cpp  example_5.cpp
problem16/: example_1.cpp  example_2.cpp
problem17/: example_1.cpp
problem1921/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp
problem2/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp
problem22/: example_1.cpp  task_1.cpp
problem23/: example_1.cpp  example_2.cpp  example_3.cpp
problem24/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
problem25/: example_1.cpp  example_2.cpp  example_3.cpp
problem26/: example_1.cpp  example_2.cpp  example_3.cpp
problem27/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
problem5/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp  example_7.cpp
problem6/: example_1.cpp  example_2.cpp
problem6/tasks/: example_1.cpp  example_2.cpp
problem8/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
problems/problem26/: 26.txt
