cmake_minimum_required(VERSION 3.21)
project(ege_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(example_1 problem1/example_1.cpp problem1/example_6.cpp problem1/example_7.cpp problem1/example_8.cpp)
add_executable(example_1_optimized problem1/example_1_optimized.cpp)
add_executable(example_2_dijkstra  problem1/example_2_dijkstra.cpp)
add_executable(example_2 problem1/example_2.cpp)
add_executable(example_3 problem1/example_3.cpp)
add_executable(example_4 problem1/example_4.cpp)
add_executable(example_5 problem1/example_5.cpp)
add_executable(example_6 problem1/example_6.cpp)
add_executable(example_7 problem1/example_7.cpp)
add_executable(example_8 problem1/example_8.cpp)
add_executable(example_9 problem1/example_9.cpp)
