cmake_minimum_required(VERSION 3.21)
project(ege_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(example_1_1 problem1/example_1.cpp)
add_executable(example_1_1_optimized problem1/example_1_optimized.cpp)
add_executable(example_1_2_dijkstra  problem1/example_2_dijkstra.cpp)
add_executable(example_1_2 problem1/example_2.cpp)
add_executable(example_1_3 problem1/example_3.cpp)
add_executable(example_1_4 problem1/example_4.cpp)
add_executable(example_1_5 problem1/example_5.cpp)
add_executable(example_1_6 problem1/example_6.cpp)
add_executable(example_1_7 problem1/example_7.cpp)
add_executable(example_1_8 problem1/example_8.cpp)
add_executable(example_1_9 problem1/example_9.cpp)

add_executable(example_2_1 problem2/example_1.cpp)
add_executable(example_2_2 problem2/example_2.cpp)
add_executable(example_2_3 problem2/example_3.cpp)
add_executable(example_2_4 problem2/example_4.cpp)
add_executable(example_2_5 problem2/example_5.cpp)